--- a/litluo/index.html
+++ b/litluo/index.html
@@ -8,6 +8,7 @@
     <link id=theme rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.1.3/minty/bootstrap.min.css">
     <!--meta name="viewport" content="width=device-width, initial-scale=1"-->
 </head>
+
 <body>
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
@@ -27,63 +28,62 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Wiki</a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="https://www5.baidu.com">百度百科</a>
-                                <a class="dropdown-item" href="http://sogo.com">搜狗</a>
-                                <a class="dropdown-item" href="http://bing.com">Bing</a>
+                                <a target="_blank" class="dropdown-item" href="https://www5.baidu.com">百度百科</a>
+                                <a target="_blank" class="dropdown-item" href="http://sogo.com">搜狗</a>
+                                <a target="_blank" class="dropdown-item" href="http://bing.com">Bing</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="https://moegirl.org">萌娘百科</a>
+                                <a target="_blank" class="dropdown-item" href="https://moegirl.org">萌娘百科</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="https://www.zhihu.com/">知乎</a>
+                                <a target="_blank" class="dropdown-item" href="https://www.zhihu.com/">知乎</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Code</a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="http://www.luogu.com.cn">洛谷</a>
-                                <a class="dropdown-item" href="https://www.w3cschool.cn/">编程狮</a>
-                                <a class="dropdown-item" href="https://github.com">Github</a>
+                                <a target="_blank" class="dropdown-item" href="http://www.luogu.com.cn">洛谷</a>
+                                <a target="_blank" class="dropdown-item" href="https://www.w3cschool.cn/">编程狮</a>
+                                <a target="_blank" class="dropdown-item" href="https://github.com">Github</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="https://cnblogs.com/luoyj506">LYJ's Blog</a>
-                                <a class="dropdown-item" href="https://kuzusy.github.io">ZWP's Blog</a>
+                                <a target="_blank" class="dropdown-item" href="https://cnblogs.com/luoyj506">LYJ's Blog</a>
+                                <a target="_blank" class="dropdown-item" href="https://kuzusy.github.io">ZWP's Blog</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="https://www.bootcss.com">Bootstrap</a>
-                                <a class="dropdown-item" href="https://bootswatch.com">Bootswatch</a>
+                                <a target="_blank" class="dropdown-item" href="https://www.bootcss.com">Bootstrap</a>
+                                <a target="_blank" class="dropdown-item" href="https://bootswatch.com">Bootswatch</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Play</a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="http://lightnovel.us">轻之国度</a>
-                                <a class="dropdown-item" href="https://www.songshuxy.com/">靴下小屋</a>
+                                <a target="_blank" class="dropdown-item" href="http://lightnovel.us">轻之国度</a>
+                                <a target="_blank" class="dropdown-item" href="https://www.songshuxy.com/">靴下小屋</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="https://www.g8hh.com/">锅巴汉化</a>
-                                <a class="dropdown-item" href="https://yx.g8hh.com/swarmsim/">锅巴虫虫</a>
+                                <a target="_blank" class="dropdown-item" href="https://www.g8hh.com/">锅巴汉化</a>
+                                <a target="_blank" class="dropdown-item" href="https://yx.g8hh.com/swarmsim/">锅巴虫虫</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Project SXZ</a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="http://10.20.37.103">资源站</a>
-                                <a class="dropdown-item" href="http://10.20.37.103:5901/vnc.html">云电脑</a>
-                                <a class="dropdown-item" href="http://10.10.28.10">直播间</a>
+                                <a target="_blank" class="dropdown-item" href="http://10.20.37.103">资源站</a>
+                                <a target="_blank" class="dropdown-item" href="http://10.20.37.103:5901/vnc.html">云电脑</a>
+                                <a target="_blank" class="dropdown-item" href="http://10.10.28.10">直播间</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="https://kuzusy.github.io/SXZ-plus-plus/">SXZ++</a>
+                                <a target="_blank" class="dropdown-item" href="https://sxz-oi.github.io/">SXZ++</a>
                         </div>
                     </li>
                 </ul>
                 <form class="d-flex" action="http://www5.baidu.com/s" method=get id=searcher>
                     <div class="input-group">
                         <input class="form-control me-sm-2" type="text" placeholder="百度一下" name=wd id=searchKeys>
-                            <button class="btn btn-secondary my-2 my-sm-0 input-group-text" type="submit" aria-haspopup="true" id=searchE>百度</button>
-                            <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
-                                <span class="visually-hidden">Toggle Dropdown</span>
-                            </button>
-                            <ul class="dropdown-menu dropdown-menu-end" style="min-width: 3rem;">
-                                <li><a class="dropdown-item" data-url="http://www5.baidu.com/s" data-var="wd" data-text="百度一下(快照真好用)"><img src=https://unpkg.com/simple-icons@v7/icons/baidu.svg width="21" height="21">百度</a></li>
-                                <li><a class="dropdown-item" data-url="http://sogo.com/web" data-var="query" data-text="搜个寄吧"><img src=https://unpkg.com/simple-icons@v7/icons/sogou.svg width="21" height="21">搜狗</a></li>
-                                <li><a class="dropdown-item" data-url="https://bing.com" data-var="q" data-text="无广告，百度能学学?"><img src=https://unpkg.com/simple-icons@v7/icons/microsoftbing.svg width="21" height="21">必应</a></li>
-                            </ul>
-                        </div>
+                        <button class="btn btn-secondary my-2 my-sm-0 input-group-text" type="submit" aria-haspopup="true" id=searchE>百度</button>
+                        <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                            <span class="visually-hidden">Toggle Dropdown</span>
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-end" style="min-width: 3rem;">
+                            <li><a class="dropdown-item" data-url="http://www5.baidu.com/s" data-var="wd" data-text="百度一下(快照真好用)"><img src=https://unpkg.com/simple-icons@v7/icons/baidu.svg width="21" height="21">百度</a></li>
+                            <li><a class="dropdown-item" data-url="http://sogo.com/web" data-var="query" data-text="搜个寄吧"><img src=https://unpkg.com/simple-icons@v7/icons/sogou.svg width="21" height="21">搜狗</a></li>
+                            <li><a class="dropdown-item" data-url="https://bing.com" data-var="q" data-text="无广告，百度能学学?"><img src=https://unpkg.com/simple-icons@v7/icons/microsoftbing.svg width="21" height="21">必应</a></li>
+                        </ul>
                     </div>
                 </form>
             </div>
@@ -130,41 +130,39 @@
         </div>
         <div class="tab-pane fade" id="links">
             <ul class="list-group list-group-flush">
+                <ul class="text-secondary">
                 <li>
-                    <a href="https://www5.baidu.com">BAIDU</a>
-                    <a href="http://sogo.com">sogo</a>
-                    <a href="http://bing.com">Bing</a>
+                    <a class="text-secondary" target="_blank" href="http://lightnovel.us">LN</a>
+                    <a class="text-secondary" target="_blank" href="http://ysjdm.net">TSDM</a>
+                    <a class="text-secondary" target="_blank" href="https://moegirl.org">萌百</a>
+                    <a class="text-secondary" target="_blank" href="https://www.songshuxy.com/">靴下小屋</a>
                 </li>
                 <li>
-                    <a href="http://lightnovel.us">LN</a>
-                    <a href="http://ysjdm.net">TSDM</a>
-                    <a href="https://moegirl.org">萌百</a>
-                    <a href="https://www.songshuxy.com/">靴下小屋</a>
+                    <a class="text-secondary" target="_blank" href="https://cnblogs.com/luoyj506">LYJ's Blog</a>
+                    <a class="text-secondary" target="_blank" href="https://kuzusy.github.io">ZWP's Blog</a>
                 </li>
                 <li>
-                    <a href="https://cnblogs.com/luoyj506">LYJ's Blog</a>
-                    <a href="https://kuzusy.github.io">ZWP's Blog</a>
+                    <a class="text-secondary" target="_blank" href="http://10.20.37.103">资源站</a>
+                    <a class="text-secondary" target="_blank" href="http://10.20.37.103:5901">云电脑</a> 
+                    <a class="text-secondary" target="_blank" href="http://10.10.28.10">直播</a>
                 </li>
                 <li>
-                    <a href="http://10.20.37.103">资源站</a>
-                    <a href="http://10.20.37.103:5901">云电脑</a> 
-                    <a href="http://10.10.28.10">直播</a>
+                    <a class="text-secondary" target="_blank" href="https://mmgal.com/music">音乐阁</a>
+                    <a class="text-secondary" target="_blank" href="https://netease-music.fe-mm.com">音乐阁2</a>
+                    <a class="text-secondary" target="_blank" href="https://yx.g8hh.com/swarmsim/">虫虫</a>
                 </li>
                 <li>
-                    <a href="https://mmgal.com/music">音乐阁</a>
-                    <a href="https://netease-music.fe-mm.com">音乐阁2</a>
-                    <a href="https://yx.g8hh.com/swarmsim/">虫虫</a>
-                </li>
-                <li>
-                    <a href="http://www.luogu.com.cn">Luogu</a>
-                    <a href="https://www.w3cschool.cn/">W3</a>
-                    <a href="https://github.com">Github</a>
-                    <a href="https://github.com/KuzuSy/SXZ-plus-plus">SXZ</a>
-                    <a href="https://www.bootcss.com/">bootstrap</a>
+                    <a class="text-secondary" target="_blank" href="http://www.luogu.com.cn">Luogu</a>
+                    <a class="text-secondary" target="_blank" href="https://www.w3cschool.cn/">W3</a>
+                    <a class="text-secondary" target="_blank" href="https://github.com">Github</a>
+                    <a class="text-secondary" target="_blank" href="https://github.com/SXZ-OI/sxz-oi.github.io.git">SXZ</a>
+                    <a class="text-secondary" target="_blank" href="https://www.bootcss.com/">bootstrap</a>
                 </li>
                 <li>
                     <p> 666 </p>
+                    <!-- <a class="text-secondary" target="_blank" href=""></a> -->
                 </li>
+                </ul>
             </ul>
         </div>
         <div class="tab-pane fade" id="Update">
@@ -182,6 +180,7 @@
                             <h3>V1.0.1-1 <small>2022.06.04</small></h3>
                             <ul>
                                 <li>Nav栏跟随页面移动</li>
+                                <li>修改Link栏内容</li>
                             </ul>
                             <h3>V1.0.1 <small>2022.06.03</small></h3>
                             <ul>
@@ -230,11 +229,10 @@
     $("form .dropdown-item").click(function(){$(searchE).text($(this).text()), searcher.action=$(this).data("url"), searchKeys.placeholder=$(this).data("text"), searchKeys.name=$(this).data("var")})
     </script>
 
+    <style> 
+    .hub { font-family: sans-serif; font-weight: bold; } .hub span:nth-child(2) { background: #FF9900; color: #000000; border-radius: 1vw; padding: 3% 7%; display: inline-block; } #manga img { width: 60%; display: block; margin: 0 20%; } 
+    </style>
+
 </body> 
-
-<style> 
-.hub { font-family: sans-serif; font-weight: bold; } .hub span:nth-child(2) { background: #FF9900; color: #000000; border-radius: 1vw; padding: 3% 7%; display: inline-block; } #manga img { width: 60%; display: block; margin: 0 20%; } 
-</style>
-
 
 </html>
