--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@ layout: page
 title: "About"
 description: "让被迫留校的锡监学子能有本应该更加快乐的平板使用体验"
 header-img: "img/about-bg.jpg"
+header-mask: 0.4
 multilingual: true
 ---
 
