--- a/litluo/index.html
+++ b/litluo/index.html
@@ -10,83 +10,85 @@
 </head>
 
 <body>
-        <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <div class="hub">
-                        <span>Sxz</span> <span>Nav</span>
-                    </div>
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarColor02">
-                    <ul class="navbar-nav me-auto">
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#">Home <span class="visually-hidden">(current)</span> </a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Wiki</a>
-                            <div class="dropdown-menu">
-                                <a target="_blank" class="dropdown-item" href="https://www5.baidu.com">百度百科</a>
-                                <a target="_blank" class="dropdown-item" href="http://sogo.com">搜狗</a>
-                                <a target="_blank" class="dropdown-item" href="http://bing.com">Bing</a>
-                                <div class="dropdown-divider"></div>
-                                <a target="_blank" class="dropdown-item" href="https://moegirl.org">萌娘百科</a>
-                                <div class="dropdown-divider"></div>
-                                <a target="_blank" class="dropdown-item" href="https://www.zhihu.com/">知乎</a>
-                            </div>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Code</a>
-                            <div class="dropdown-menu">
-                                <a target="_blank" class="dropdown-item" href="http://www.luogu.com.cn">洛谷</a>
-                                <a target="_blank" class="dropdown-item" href="https://www.w3cschool.cn/">编程狮</a>
-                                <a target="_blank" class="dropdown-item" href="https://github.com">Github</a>
-                                <div class="dropdown-divider"></div>
-                                <a target="_blank" class="dropdown-item" href="https://cnblogs.com/luoyj506">LYJ's Blog</a>
-                                <a target="_blank" class="dropdown-item" href="https://kuzusy.github.io">ZWP's Blog</a>
-                                <div class="dropdown-divider"></div>
-                                <a target="_blank" class="dropdown-item" href="https://www.bootcss.com">Bootstrap</a>
-                                <a target="_blank" class="dropdown-item" href="https://bootswatch.com">Bootswatch</a>
-                            </div>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Play</a>
-                            <div class="dropdown-menu">
-                                <a target="_blank" class="dropdown-item" href="http://lightnovel.us">轻之国度</a>
-                                <a target="_blank" class="dropdown-item" href="https://www.songshuxy.com/">靴下小屋</a>
-                                <div class="dropdown-divider"></div>
-                                <a target="_blank" class="dropdown-item" href="https://www.g8hh.com/">锅巴汉化</a>
-                                <a target="_blank" class="dropdown-item" href="https://yx.g8hh.com/swarmsim/">锅巴虫虫</a>
-                            </div>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Project SXZ</a>
-                            <div class="dropdown-menu">
-                                <a target="_blank" class="dropdown-item" href="http://10.20.37.103">资源站</a>
-                                <a target="_blank" class="dropdown-item" href="http://10.20.37.103:5901/vnc.html">云电脑</a>
-                                <a target="_blank" class="dropdown-item" href="http://10.10.28.10">直播间</a>
-                                <div class="dropdown-divider"></div>
-                                <a target="_blank" class="dropdown-item" href="https://sxz-oi.github.io/">SXZ++</a>
+    <img loop=loop id="bg" style="z-index:-1;filter:brightness(60%);position:fixed;top:0;left:0;width:100%" autoplay=autoplay src=http://friday-note.oss-cn-hangzhou.aliyuncs.com/cloudnote/notes/sxz/23777/test.jpg>
+
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <div class="hub">
+                    <span>Sxz</span> <span>Nav</span>
+                </div>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarColor02">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Home <span class="visually-hidden">(current)</span> </a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Wiki</a>
+                        <div class="dropdown-menu">
+                            <a target="_blank" class="dropdown-item" href="https://www5.baidu.com">百度百科</a>
+                            <a target="_blank" class="dropdown-item" href="http://sogo.com">搜狗</a>
+                            <a target="_blank" class="dropdown-item" href="http://bing.com">Bing</a>
+                            <div class="dropdown-divider"></div>
+                            <a target="_blank" class="dropdown-item" href="https://moegirl.org">萌娘百科</a>
+                            <div class="dropdown-divider"></div>
+                            <a target="_blank" class="dropdown-item" href="https://www.zhihu.com/">知乎</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Code</a>
+                        <div class="dropdown-menu">
+                            <a target="_blank" class="dropdown-item" href="http://www.luogu.com.cn">洛谷</a>
+                            <a target="_blank" class="dropdown-item" href="https://www.w3cschool.cn/">编程狮</a>
+                            <a target="_blank" class="dropdown-item" href="https://github.com">Github</a>
+                            <div class="dropdown-divider"></div>
+                            <a target="_blank" class="dropdown-item" href="https://cnblogs.com/luoyj506">LYJ's Blog</a>
+                            <a target="_blank" class="dropdown-item" href="https://kuzusy.github.io">ZWP's Blog</a>
+                            <div class="dropdown-divider"></div>
+                            <a target="_blank" class="dropdown-item" href="https://www.bootcss.com">Bootstrap</a>
+                            <a target="_blank" class="dropdown-item" href="https://bootswatch.com">Bootswatch</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Play</a>
+                        <div class="dropdown-menu">
+                            <a target="_blank" class="dropdown-item" href="http://lightnovel.us">轻之国度</a>
+                            <a target="_blank" class="dropdown-item" href="https://www.songshuxy.com/">靴下小屋</a>
+                            <div class="dropdown-divider"></div>
+                            <a target="_blank" class="dropdown-item" href="https://www.g8hh.com/">锅巴汉化</a>
+                            <a target="_blank" class="dropdown-item" href="https://yx.g8hh.com/swarmsim/">锅巴虫虫</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Project SXZ</a>
+                        <div class="dropdown-menu">
+                            <a target="_blank" class="dropdown-item" href="http://10.20.37.103">资源站</a>
+                            <a target="_blank" class="dropdown-item" href="http://10.20.37.103:5901/vnc.html">云电脑</a>
+                            <a target="_blank" class="dropdown-item" href="http://10.10.28.10">直播间</a>
+                            <div class="dropdown-divider"></div>
+                            <a target="_blank" class="dropdown-item" href="https://sxz-oi.github.io/">SXZ++</a>
                         </div>
                     </li>
                 </ul>
-                <form class="d-flex" action="http://www5.baidu.com/s" method=get id=searcher>
-                    <div class="input-group">
-                        <input class="form-control me-sm-2" type="text" placeholder="百度一下" name=wd id=searchKeys>
-                        <button class="btn btn-secondary my-2 my-sm-0 input-group-text" type="submit" aria-haspopup="true" id=searchE>百度</button>
-                        <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
-                            <span class="visually-hidden">Toggle Dropdown</span>
-                        </button>
-                        <ul class="dropdown-menu dropdown-menu-end" style="min-width: 3rem;">
-                            <li><a class="dropdown-item" data-url="http://www5.baidu.com/s" data-var="wd" data-text="百度一下(快照真好用)"><img src=https://unpkg.com/simple-icons@v7/icons/baidu.svg width="21" height="21">百度</a></li>
-                            <li><a class="dropdown-item" data-url="http://sogo.com/web" data-var="query" data-text="搜个寄吧"><img src=https://unpkg.com/simple-icons@v7/icons/sogou.svg width="21" height="21">搜狗</a></li>
-                            <li><a class="dropdown-item" data-url="https://bing.com" data-var="q" data-text="无广告，百度能学学?"><img src=https://unpkg.com/simple-icons@v7/icons/microsoftbing.svg width="21" height="21">必应</a></li>
-                        </ul>
-                    </div>
-                </form>
             </div>
+            <form class="d-flex" action="http://www5.baidu.com/s" method=get id=searcher>
+                <div class="input-group">
+                    <input class="form-control me-sm-2" type="text" placeholder="百度一下" name=wd id=searchKeys>
+                    <button class="btn btn-secondary my-2 my-sm-0 input-group-text" type="submit" aria-haspopup="true" id=searchE>百度</button>
+                    <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                        <span class="visually-hidden">Toggle Dropdown</span>
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-end" style="min-width: 3rem;">
+                        <li><a class="dropdown-item" data-url="http://www5.baidu.com/s" data-var="wd" data-text="百度一下(快照真好用)"><img src=https://unpkg.com/simple-icons@v7/icons/baidu.svg width="21" height="21">百度</a></li>
+                        <li><a class="dropdown-item" data-url="http://sogo.com/web" data-var="query" data-text="搜个寄吧"><img src=https://unpkg.com/simple-icons@v7/icons/sogou.svg width="21" height="21">搜狗</a></li>
+                        <li><a class="dropdown-item" data-url="https://bing.com" data-var="q" data-text="无广告，百度能学学?"><img src=https://unpkg.com/simple-icons@v7/icons/microsoftbing.svg width="21" height="21">必应</a></li>
+                    </ul>
+                </div>
+            </form>
         </div>
     </nav>
 
@@ -169,14 +171,14 @@
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 21%;"></div> 
             </div>
-            <h1>Update Log</h1>
-            <div class="accordion" id="accordionExample">
+            <h1 class="text-secondary">Update Log</h1>
+            <div class="accordion" id="accordionExample" style="opacity:0.8">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> Version 1.0.X </button>
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
+                        <div class="accordion-body text-secondary">
                             <h3>V1.0.1-1 <small>2022.06.04</small></h3>
                             <ul>
                                 <li>Nav栏跟随页面移动</li>
