--- a/Nav/chat.html
+++ b/Nav/chat.html
@@ -375,7 +375,7 @@
 
         //window.onerror=(e)=>{log("ERR: "+e)}
         enableJS = 1, msg = [], deleted = {}, sent = {}, msgNode = {}, T = 20, itv = 0, tick = 0, key = 114514,
-            bgList = ["http://10.10.28.10:81/D:/ftp/Xueke/y艺术/2021合唱论文/高一七班朱伟鹏合唱论文/files/background.png"],
+            bgList = ["http://10.10.28.10:81/D:/ftp/Xueke/y艺术/files/background.png"],
             aMap = {
                 "舔舔后藤二里:": "a-1",
                 "汪蒸瘟:": "a-2",
