--- a/Nav/index.html
+++ b/Nav/index.html
@@ -37,6 +37,10 @@
 								CSS</a>
 						</li>
 						<li class="nav-item">
+							<a class="nav-link" href="https://gp.astrack.icu/zyapi/">中育
+								API</a>
+						</li>
+						<li class="nav-item">
 							<a class="nav-link" href="#" onclick="theme.href=theme.href.replace('darkly','flatly')">Change
 								Theme</a>
 						</li>
